// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FrontPage /> renders correctly 1`] = `
<div>
  <PostPreviewList
    posts={Array []}
  />
  <div
    className="socialMedia"
  >
    <a
      href="https://www.facebook.com/radiorevolt.no/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Facebook"
        className="facebookLogo"
        src="facebook.svg"
      />
    </a>
    <a
      href="https://www.instagram.com/radiorevolt/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Instagram"
        className="instagramLogo"
        src="instagram.svg"
      />
    </a>
  </div>
  <div
    className="loaderWrapper"
  >
    <LoadPostsButton
      loadPosts={[Function]}
    />
  </div>
</div>
`;

exports[`<FrontPage /> renders correctly on error 1`] = `
<div>
  Kunne ikke laste inn forsiden.
</div>
`;

exports[`<FrontPage /> renders correctly while loading 1`] = `
<div>
  <div
    className="loaderWrapper"
  >
    <Loader />
  </div>
</div>
`;
